--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -3,6 +3,7 @@
 @import "../../styles/hero";
 @import "../../styles/form";
 @import "../../styles/why";
+@import "../../styles/footer";
 @import "../../styles/whatsapp-fab";
 
 // TABLET AND DESKTOP STYLES
@@ -39,7 +40,7 @@
   //.hospital-desktop();
   //.package-desktop();
   //.faq-desktop();
-  //.footer-desktop();
+  .footer-desktop();
 }
 
 @media @media-large {
