--- a/styles/header.less
+++ b/styles/header.less
@@ -1,3 +1,5 @@
+@import "variables";
+
 header {
   padding: 20px 0;
   position: relative;
@@ -32,8 +34,7 @@ header nav {  // TODO make a dropdown menu!?
     > a {
       font-size: 16px;
       line-height: 21px;
-      font-weight: 500;
-      color: #21234A !important;
+      color: @accent-color !important;
     }
   }
 }
