--- a/styles/generic.less
+++ b/styles/generic.less
@@ -1,24 +1,4 @@
-// DIMENSIONS
-
-@mobile-max-width: 600px; // Extra small devices (phones)
-@tablet-min-width: 600px; // Small devices (portrait tablets and large phones)
-@l-tablets-min-width: 768px; // Medium devices (landscape tablets)
-@desktop-min-width: 992px; // Large devices (laptops/desktops)
-@large-min-width: 1280px; // Extra large devices (large laptops and desktops)
-@page-width: 1280px;
-@global-radius: 10px;
-
-// QUERIES
-
-@media-mobile: ~"only screen and (max-width: @{mobile-max-width})";
-@media-tablet: ~"only screen and (min-width: @{tablet-min-width})";
-@media-l-tablet: ~"only screen and (min-width: @{l-tablets-min-width})";
-@media-desktop: ~"only screen and (min-width: @{desktop-min-width})";
-@media-large: ~"only screen and (min-width: @{large-min-width})";
-
-// THEMING
-
-@accent-color: #21234A;
+@import "variables";
 
 // UNIVERSAL BORDER BOX & SMOOTH SCROLL
 
@@ -99,7 +79,7 @@ a:link, a:visited {
   text-decoration: none;
 
   &:not(.button) {
-    //color: @link-color; // FIXME it overrides other definitions
+    color: @accent-color;
   }
 }
 
