--- a/styles/generic.less
+++ b/styles/generic.less
@@ -34,8 +34,8 @@ main {
 .container {
   max-width: @page-width;
   margin: 0 auto;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: @page-padding;
+  padding-right: @page-padding;
 }
 
 picture {
@@ -81,6 +81,7 @@ strong {
   line-height: 46px;
   text-align: center;
   margin-bottom: 30px;
+  color: #282866;
 }
 
 .button {
