--- a/styles/variables.less
+++ b/styles/variables.less
@@ -6,6 +6,7 @@
 @desktop-min-width: 992px; // Large devices (laptops/desktops)
 @large-min-width: 1280px; // Extra large devices (large laptops and desktops)
 @page-width: 1280px;
+@page-padding: 10px;
 @global-radius: 10px;
 
 // QUERIES
@@ -19,3 +20,5 @@
 // THEMING
 
 @accent-color: #21234A;
+@secondary-color: #f4f9ff;
+@tertiary-color: #4C86BC;
