Add influencers section

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -3,6 +3,7 @@
 @import "../../styles/hero";
 @import "../../styles/form";
 @import "../../styles/why";
+@import "../../styles/influencers";
 @import "../../styles/faq";
 @import "../../styles/footer";
 @import "../../styles/whatsapp-fab";
@@ -40,6 +41,7 @@
   //.about-desktop();
   //.hospital-desktop();
   //.package-desktop();
+  .influencers-desktop();
   .faq-desktop();
   .footer-desktop();
 }
