--- a/styles/generic.less
+++ b/styles/generic.less
@@ -81,7 +81,7 @@ strong {
   line-height: 46px;
   text-align: center;
   margin-bottom: 30px;
-  color: #282866;
+  color: @accent-color;
 }
 
 .button {
