--- a/styles/faq.less
+++ b/styles/faq.less
@@ -23,6 +23,10 @@
     padding: 30px 0;
   }
 
+  .section-title {
+    color: #282866;
+  }
+
   .accordion-item {
     list-style-type: none;
     padding: 0 15px;
