Add CTA sections

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -3,6 +3,7 @@
 @import "../../styles/hero";
 @import "../../styles/form";
 @import "../../styles/why";
+@import "../../styles/cta";
 @import "../../styles/influencers";
 @import "../../styles/faq";
 @import "../../styles/footer";
@@ -23,10 +24,12 @@
   //.testimonials-tablet();
   //.hospital-tablet();
   //.package-tablet();
+
 }
 
 @media @media-l-tablet {
   .header-l-tablet();
+  .cta-l-tablet-and-desktop();
 }
 
 @media @media-desktop {
@@ -35,12 +38,6 @@
   .hero-desktop();
   .form-desktop();
   .why-desktop();
-  //.cta-desktop();
-  //.services-desktop();
-  //.testimonials-desktop();
-  //.about-desktop();
-  //.hospital-desktop();
-  //.package-desktop();
   .influencers-desktop();
   .faq-desktop();
   .footer-desktop();
