Add services section skeleton

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -4,6 +4,7 @@
 @import "../../styles/form";
 @import "../../styles/why";
 @import "../../styles/cta";
+@import "../../styles/services";
 @import "../../styles/influencers";
 @import "../../styles/faq";
 @import "../../styles/footer";
