Add package section Which is mistyped as "services" section in a previous commit.

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -4,7 +4,7 @@
 @import "../../styles/form";
 @import "../../styles/why";
 @import "../../styles/cta";
-@import "../../styles/services";
+@import "../../styles/package";
 @import "../../styles/influencers";
 @import "../../styles/faq";
 @import "../../styles/footer";
@@ -24,8 +24,7 @@
   //.services-tablet();
   //.testimonials-tablet();
   //.hospital-tablet();
-  //.package-tablet();
-
+  .package-tablet();
 }
 
 @media @media-l-tablet {
@@ -39,6 +38,7 @@
   .hero-desktop();
   .form-desktop();
   .why-desktop();
+  .package-desktop();
   .influencers-desktop();
   .faq-desktop();
   .footer-desktop();
