Larger spacing between desktop section title and content

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -17,7 +17,7 @@
 }
 
 @media @media-tablet {
-  .button-tablet();
+  .generic-tablet();
   .header-tablet();
   .form-tablet();
   //.review-tablet-and-desktop();
@@ -33,7 +33,7 @@
 }
 
 @media @media-desktop {
-  .button-desktop();
+  .generic-desktop();
   .header-desktop();
   .hero-desktop();
   .form-desktop();
