--- a/styles/generic.less
+++ b/styles/generic.less
@@ -100,13 +100,17 @@ strong {
   text-align: center;
 }
 
-.button-tablet() {
+.generic-tablet() {
   .button.red {
     max-width: 450px;
   }
 }
 
-.button-desktop() {
+.generic-desktop() {
+  .section-title {
+    margin-bottom: 60px;
+  }
+
   .button {
     font-size: 18px;
     line-height: 30px;
