Add team section

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -3,6 +3,7 @@
 @import "../../styles/hero";
 @import "../../styles/form";
 @import "../../styles/why";
+@import "../../styles/team";
 @import "../../styles/cta";
 @import "../../styles/package";
 @import "../../styles/influencers";
