--- a/styles/faq.less
+++ b/styles/faq.less
@@ -94,6 +94,7 @@
 
     .section-title {
       text-align: left;
+      margin-bottom: 30px;  // override generic desktop margin
     }
 
     .accordion {
