Add hospital section

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -5,6 +5,7 @@
 @import "../../styles/why";
 @import "../../styles/team";
 @import "../../styles/cta";
+@import "../../styles/hospital";
 @import "../../styles/package";
 @import "../../styles/influencers";
 @import "../../styles/faq";
@@ -24,13 +25,13 @@
   //.review-tablet-and-desktop();
   //.services-tablet();
   //.testimonials-tablet();
-  //.hospital-tablet();
   .package-tablet();
 }
 
 @media @media-l-tablet {
   .header-l-tablet();
   .cta-l-tablet-and-desktop();
+  .hospital-l-tablet();
 }
 
 @media @media-desktop {
