Improve hospital section's tablet view

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -22,9 +22,7 @@
   .generic-tablet();
   .header-tablet();
   .form-tablet();
-  //.review-tablet-and-desktop();
-  //.services-tablet();
-  //.testimonials-tablet();
+  .hospital-tablet();
   .package-tablet();
 }
 
