Add before after section

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -3,6 +3,8 @@
 @import "../../styles/hero";
 @import "../../styles/form";
 @import "../../styles/why";
+@import "../../styles/swiper";
+@import "../../styles/before-after";
 @import "../../styles/team";
 @import "../../styles/cta";
 @import "../../styles/hospital";
@@ -38,6 +40,7 @@
   .hero-desktop();
   .form-desktop();
   .why-desktop();
+  .before-after-desktop();
   .package-desktop();
   .influencers-desktop();
   .faq-desktop();
