Add services section

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -3,6 +3,7 @@
 @import "../../styles/hero";
 @import "../../styles/form";
 @import "../../styles/why";
+@import "../../styles/services";
 @import "../../styles/swiper";
 @import "../../styles/before-after";
 @import "../../styles/team";
@@ -24,6 +25,7 @@
   .generic-tablet();
   .header-tablet();
   .form-tablet();
+  .services-tablet();
   .hospital-tablet();
   .package-tablet();
 }
@@ -40,6 +42,7 @@
   .hero-desktop();
   .form-desktop();
   .why-desktop();
+  .services-desktop();
   .before-after-desktop();
   .package-desktop();
   .influencers-desktop();
