--- a/styles/form.less
+++ b/styles/form.less
@@ -1,16 +1,17 @@
+@import "variables";
+
 .form-box {
-  padding: 50px 10px;
-  background-color: #1a1a1a;
-  border-radius: 10px;
+  padding: 35px 10px;
+  background-color: #89B7E2;
+  border-radius: @global-radius;
 
   .section-title {
-    color: #fff;
+    margin-bottom: 12px !important;
   }
 
   p {
-    color: #fff;
-    font-size: 16px;
-    line-height: 23px;
+    font-size: 18px;
+    line-height: 22px;
   }
 
   .button {
@@ -21,12 +22,14 @@
 form {
   display: flex;
   flex-direction: column;
-  margin-top: 40px;
+  margin-top: 30px;
   row-gap: 15px;
 
   input:not(.button) {
+    outline: none;
     padding: 12px 25px;
     border-radius: 5px;
+    border: 1px solid #C5E1FC;
     background-color: #fff;
     color: #1A1A1A;
     font-size: 16px;
@@ -35,6 +38,10 @@ form {
 
     &::placeholder {
       color: #ADADAD;
+    }
+
+    &:focus {
+      outline: 2px solid @accent-color;
     }
   }
 
@@ -46,6 +53,7 @@ form {
     display: none;
   }
 
+  // TODO move these to commons
   .iti__selected-flag {
     padding-top: 0 !important;
     height: 100% !important;
@@ -70,6 +78,6 @@ form {
     padding-right: 25px;
     flex-basis: 100%;
     min-width: 400px;
-    max-width: 474px;
+    max-width: 500px;
   }
 }
