Update hero section

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -24,6 +24,7 @@
 @media @media-tablet {
   .generic-tablet();
   .header-tablet();
+  .hero-tablet-and-desktop();
   .form-tablet();
   .services-tablet();
   .hospital-tablet();
