--- a/styles/hero.less
+++ b/styles/hero.less
@@ -1,6 +1,10 @@
+@import "variables";
+
 #hero {
-  //height: 857px;
-  background-size: cover;
+  position: relative;
+  height: 857px;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
 
   > .container {
     display: flex;
@@ -14,10 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  h1, h2 {
-    text-align: center;
-  }
+  text-align: center;
 
   h1 {
     font-size: 34px;
@@ -26,7 +27,8 @@
     margin-bottom: 12px;
   }
 
-  h2 {
+  .hero-subtitle {
+    color: @tertiary-color;
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 36px;
@@ -34,14 +36,22 @@
 }
 
 #org-section {
-  padding: 8px 0;
+  position: absolute;
+  bottom: 20px;
+  left: @page-padding;
+  right: @page-padding;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 12px;
+  align-items: center;
+  justify-content: space-around;
 
-  > .container {
-    display: flex;
-    flex-wrap: wrap !important;
-    row-gap: 12px;
-    align-items: center;
-    justify-content: space-around;
+  .org-title {
+    font-size: 20px;
+    line-height: 26px;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 10px;
   }
 }
 
@@ -49,34 +59,33 @@
 
 .hero-mobile() {
   #hero {
-    background: url("/assets/hero-mobile2x.jpg");
+    background: url("/assets/hero-mobile.jpg");
+  }
+}
+
+.hero-tablet-and-desktop() {
+  #hero {
+    background: url("/assets/hero.jpg");
   }
 }
 
 .hero-desktop() {
-  #hero {
-    background: url("/assets/hero.jpg");
-  }
-
   #hero > .container {
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    align-items: end;
+    justify-self: center;
   }
 
   .hero-content {
     align-items: end;
     justify-content: end;
-
-    h1, h2 {
-      text-align: end;
-    }
+    text-align: end;
 
     h1 {
       font-size: 39px;
       line-height: 49px;
     }
 
-    h2 {
+    .hero-subtitle {
       font-size: 22px;
       line-height: 30px;
     }
@@ -87,20 +96,18 @@
   }
 
   #org-section {
-    margin-top: 100px;
-    background-color: initial;
+    column-gap: 25px;
+    row-gap: 20px;
 
-    > .container {
-      display: flex;
-      column-gap: 25px;
-      row-gap: 20px;
-      padding: 8px 0;
+    .org-title {
+      display: none;
     }
   }
 }
 
+// FIXME it should be by pixel density, not by screen width
 .hero-large() {
   #hero {
-    background: url("/assets/hero@2x.jpg");
+    //background: url("/assets/hero@2x.jpg");
   }
 }
