--- a/styles/hero.less
+++ b/styles/hero.less
@@ -76,6 +76,7 @@
   }
 
   .hero-content {
+    margin-top: 100px;
     align-items: end;
     justify-content: end;
     text-align: end;
@@ -96,6 +97,11 @@
   }
 
   #org-section {
+    right: unset;
+    left: unset;
+    bottom: 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     column-gap: 25px;
     row-gap: 20px;
 
