Add parallax effect to hero background

--- a/styles/generic.less
+++ b/styles/generic.less
@@ -118,3 +118,10 @@ strong {
     padding: 12px 25px;
   }
 }
+
+.parallax {
+  background-attachment: fixed !important;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
