--- a/styles/hero.less
+++ b/styles/hero.less
@@ -3,8 +3,8 @@
 #hero {
   position: relative;
   height: 857px;
-  background-size: cover !important;
-  background-repeat: no-repeat !important;
+  background-size: cover;
+  background-repeat: no-repeat;
 
   > .container {
     display: flex;
