--- a/styles/variables.less
+++ b/styles/variables.less
@@ -16,6 +16,7 @@
 @media-l-tablet: ~"only screen and (min-width: @{l-tablets-min-width})";
 @media-desktop: ~"only screen and (min-width: @{desktop-min-width})";
 @media-large: ~"only screen and (min-width: @{large-min-width})";
+@media-retina: ~"(min-resolution:192dpi)";
 
 // THEMING
 
