--- a/styles/whatsapp-fab.less
+++ b/styles/whatsapp-fab.less
@@ -1,65 +1,51 @@
 
 #whatsapp-fab {
   position: fixed;
-  bottom: 20px;
   right: 20px;
-  z-index: 100;
-  transition: transform .2s ease-in-out;
+  bottom: 20px;
+  transition: transform .2s ease-in-out, filter .2s ease-in-out;
 
   &:hover {
-    transform: scale(1.05);
+    transform: scale(1.04);
+    filter: brightness(110%);
   }
 
   .wp-dots {
-    display: flex;
     position: absolute;
     top: 0;
+    margin-top: 7px;
+    margin-left: 8px;
+    display: flex;
+    column-gap: 8px;
   }
 
   .wp-icon {
     width: 100px;
   }
 
-  .circle {
-    position: absolute;
+  @keyframes typing-wave {
+    0%, 60%, 100% {
+      transform: initial;
+    }
+    30% {
+      transform: translateY(-4px);
+    }
+  }
+
+  .dot {
     width: 8px;
     height: 8px;
-    margin-top: 15px;
-    margin-left: 5px;
     background-color: #4cb050;
     border-radius: 50%;
-    animation-name: circle;
-    animation-direction: alternate;
+    animation: typing-wave .7s linear -1.3s;
     animation-iteration-count: infinite;
-    animation-timing-function: linear;
-  }
 
-  .circle1 {
-    left: 4px;
-    animation-duration: 1.1s;
-  }
-
-  .circle2 {
-    left: 18px;
-    animation-duration: 1s;
-  }
-
-  .circle3 {
-    left: 32px;
-    animation-duration: 0.9s;
-  }
-
-  /* ************** */
-
-  @keyframes circle {
-    0% {
-      top: -10px;
+    &.two {
+      animation-delay: -1.1s;
     }
-    8% {
-      top: -8px
-    }
-    100% {
-      top: -8px;
+
+    &.three {
+      animation-delay: -1s;
     }
   }
 }
