Fix style issues

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -43,6 +43,7 @@
   .hero-desktop();
   .form-desktop();
   .why-desktop();
+  .hospital-desktop();
   .services-desktop();
   .before-after-desktop();
   .package-desktop();
