--- a/styles/generic.less
+++ b/styles/generic.less
@@ -17,8 +17,8 @@ body {
 
 // NORMALIZE
 
-@import (inline) "../scripts/shared/normalize.css";
-@import (inline) "../scripts/shared/min-reset.css";
+@import (inline) "../commons/styles/normalize.min.css";
+@import (inline) "../commons/styles/min-reset.css";
 
 // GENERICS & COMMONS
 
