--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -13,7 +13,7 @@
 @import "../../styles/influencers";
 @import "../../styles/faq";
 @import "../../styles/footer";
-@import "../../styles/whatsapp-fab";
+@import "../../commons/styles/whatsapp-fab";
 
 // TABLET AND DESKTOP STYLES
 
