--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -1,4 +1,5 @@
 @import "../../styles/generic";
+@import "../../styles/banner";
 @import "../../styles/header";
 @import "../../styles/hero";
 @import "../../styles/form";
