--- a/dental-implant-turkey/style.less
+++ b/dental-implant-turkey/style.less
@@ -1,4 +1,4 @@
 @import "../public/implant/style";
 
-@import (inline) "iti.min.css";
-@import (inline) "swiper.min.css";
+//@import (inline) "iti.min.css";
+//@import (inline) "swiper.min.css";
