--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -30,7 +30,7 @@ http {
 
 	server {
 		listen 8080;
-		server_name _;
+		server_name lptest.dentfixturkey.com;
 		keepalive_timeout 5;
 		client_max_body_size <%= ENV['NGINX_CLIENT_MAX_BODY_SIZE'] || 1 %>M;
 
