--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -44,6 +44,7 @@
   .hero-desktop();
   .form-desktop();
   .why-desktop();
+  .cta-desktop();
   .hospital-desktop();
   .services-desktop();
   .before-after-desktop();
@@ -59,11 +60,4 @@
 
 // ACCESSIBILITY
 
-@media screen and (prefers-reduced-motion: reduce) {
-  * {
-    // Very short durations means JavaScript that relies on events still works
-    animation-duration: 0.001ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.001ms !important;
-  }
-}
+@import "../../commons/styles/accessibility";
