--- a/styles/generic.less
+++ b/styles/generic.less
@@ -96,11 +96,12 @@ strong {
   font-size: 18px;
   line-height: 28px;
   text-align: center;
-  transition: background-color .25s ease-in-out, scale .1s ease-in-out;
+  transition: background-color .4s, scale .4s;
 }
 
 .button:hover, .button:active {
   background-color: #353768;
+  scale: .99;
 }
 
 .button:active {
