Separate critical CSS to improve FCP/LCP

--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -1,7 +1,5 @@
-@import "../../styles/generic";
-@import "../../styles/banner";
-@import "../../styles/header";
-@import "../../styles/hero";
+// @import "../../styles/...";
+// preload above!
 @import "../../styles/form";
 @import "../../styles/why";
 @import "../../styles/services";
@@ -19,13 +17,13 @@
 // TABLET AND DESKTOP STYLES
 
 @media @media-mobile {
-  .hero-mobile();
+  //.hero-mobile();
 }
 
 @media @media-tablet {
-  .generic-tablet();
-  .header-tablet();
-  .hero-tablet-and-desktop();
+  //.generic-tablet();
+  //.header-tablet();
+  //.hero-tablet-and-desktop();
   .form-tablet();
   .services-tablet();
   .hospital-tablet();
@@ -33,15 +31,15 @@
 }
 
 @media @media-l-tablet {
-  .header-l-tablet();
+  //.header-l-tablet();
   .cta-l-tablet-and-desktop();
   .hospital-l-tablet();
 }
 
 @media @media-desktop {
-  .generic-desktop();
-  .header-desktop();
-  .hero-desktop();
+  //.generic-desktop();
+  //.header-desktop();
+  //.hero-desktop();
   .form-desktop();
   .why-desktop();
   .cta-desktop();
