--- a/public/implant/style.less
+++ b/public/implant/style.less
@@ -10,6 +10,7 @@
 @import "../../styles/hospital";
 @import "../../styles/package";
 @import "../../styles/influencers";
+@import "../../commons/styles/faq-accordion";
 @import "../../styles/faq";
 @import "../../styles/footer";
 @import "../../commons/styles/whatsapp-fab";
