--- a/styles/faq.less
+++ b/styles/faq.less
@@ -66,6 +66,8 @@
     font-size: 14px;
     line-height: 20px;
     color: #636374;
+    // Override commons' transition:
+    transition: max-height .6s, padding .75s, color .37s, background-color .6s;
   }
 }
 
