--- a/styles/package.less
+++ b/styles/package.less
@@ -3,6 +3,16 @@
 #package {
   padding: 45px 0;
 
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .button {
+    margin-top: 30px;
+  }
+
   .card-container {
     display: grid;
     row-gap: 10px;
@@ -11,20 +21,13 @@
   .card {
     padding: 30px 20px;
     display: grid;
-    grid-template-rows: 83px auto auto auto;
+    grid-template-rows: 83px auto auto;
     row-gap: 20px;
     align-items: center;
     justify-items: center;
     text-align: center;
     background-color: @secondary-color;
     border-radius: @global-radius;
-
-    > .button {
-      margin-top: 10px;
-      min-width: 150px;
-      width: 100%;
-      align-self: end;
-    }
   }
 
   .card-title {
@@ -57,6 +60,10 @@
 .package-desktop() {
   #package {
     padding: 40px 0 80px;
+
+    .button {
+      max-width: fit-content;
+    }
 
     .card-container {
       row-gap: 35px;
