Correct misnamed sections

--- a/styles/package.less
+++ b/styles/package.less
@@ -1,6 +1,6 @@
 @import "variables";
 
-#package {
+#services {
   padding: 45px 0;
 
   .container {
@@ -44,7 +44,7 @@
 }
 
 .package-tablet() {
-  #package {
+  #services {
     .card-container {
       column-gap: 10px;
       grid-template-columns: repeat(2, calc(50% - $column-gap / 2));
@@ -58,7 +58,7 @@
 }
 
 .package-desktop() {
-  #package {
+  #services {
     padding: 40px 0 80px;
 
     .button {
