--- a/styles/services.less
+++ b/styles/services.less
@@ -1,6 +1,6 @@
 @import "variables";
 
-#services {
+#package {
   padding-top: 35px;
 
   .container {
@@ -91,7 +91,7 @@
 }
 
 .services-tablet() {
-  #services {
+  #package {
     .card-container {
       grid-template-columns: repeat(4, 1fr);
       column-gap: 25px;
@@ -108,7 +108,7 @@
 }
 
 .services-desktop() {
-  #services {
+  #package {
     padding: 80px 0 40px;
 
     .card-container {
