--- a/variants/implant/style.less
+++ b/variants/implant/style.less
@@ -13,6 +13,7 @@
 @import "../../commons/styles/faq-accordion";
 @import "../../styles/faq";
 @import "../../styles/footer";
+@import "../../commons/styles/wp-form";
 @import "../../commons/styles/whatsapp-fab";
 
 // TABLET AND DESKTOP STYLES
