--- a/styles/form.less
+++ b/styles/form.less
@@ -66,10 +66,9 @@ form {
 }
 
 .form-tablet() {
-  form {
+  .form-box {
     max-width: 450px;
-    margin-left: auto;
-    margin-right: auto;
+    align-self: center;
   }
 }
 
