--- a/styles/why.less
+++ b/styles/why.less
@@ -26,7 +26,7 @@
 
       > span {
         font-size: 18px;
-        line-height: 24px;
+        line-height: 1.5;
 
         &:last-of-type {
           display: none;  // Show long description only on desktop
@@ -34,7 +34,7 @@
       }
 
       &:not(:last-child) {
-        margin-bottom: 35px;
+        margin-bottom: 20px;
       }
     }
   }
@@ -79,10 +79,6 @@
           margin-top: 10px;
 
         }
-      }
-
-      &:not(:last-child) {
-        margin-bottom: 30px;
       }
     }
   }
