--- a/styles/form.less
+++ b/styles/form.less
@@ -34,7 +34,7 @@ form {
     background-color: #fff;
     color: #1A1A1A;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     width: 100%;
 
     &::placeholder {
