Clean up styles

--- a/styles/form.less
+++ b/styles/form.less
@@ -65,14 +65,16 @@ form {
   }
 }
 
-.form-tablet() {
+.mq-tablet() { .mq-tablet-form(); }
+.mq-tablet-form() {
   .form-box {
     max-width: 450px;
     align-self: center;
   }
 }
 
-.form-desktop() {
+.mq-desktop() { .mq-desktop-form(); }
+.mq-desktop-form() {
   .form-box {
     padding-left: 25px;
     padding-right: 25px;
