--- a/styles/generic.less
+++ b/styles/generic.less
@@ -83,11 +83,13 @@ strong {
   scale: 1.05;
 }
 
-.generic-tablet() {
+.mq-tablet-critic() { .mq-tablet-generic(); }
+.mq-tablet-generic() {
 
 }
 
-.generic-desktop() {
+.mq-desktop-critic() { .mq-desktop-generic(); }
+.mq-desktop-generic() {
   .section-title {
     font-size: 34px;
     margin-bottom: 60px;
