--- a/styles/header.less
+++ b/styles/header.less
@@ -15,7 +15,7 @@ header nav {  // TODO make a dropdown menu!?
   display: none;
 }
 
-.header-tablet() {
+.mq-tablet-critic() {
   header > .container {
     flex-direction: column;
     justify-content: center;
@@ -24,7 +24,7 @@ header nav {  // TODO make a dropdown menu!?
   }
 }
 
-.header-l-tablet() {
+.mq-l-tablet-critic() {
   header nav {
     display: flex;
     justify-content: center;
@@ -39,7 +39,7 @@ header nav {  // TODO make a dropdown menu!?
   }
 }
 
-.header-desktop() {
+.mq-desktop-critic() {
   header {
     padding: 35px 0;
 
