--- a/styles/hero.less
+++ b/styles/hero.less
@@ -49,7 +49,7 @@
 
 // MEDIA QUERIES
 
-.hero-mobile() {
+.mq-mobile-critic() {
   // TODO check if hero-mobile 2x version looks good
 
   .webp #hero {
@@ -61,7 +61,7 @@
   }
 }
 
-.hero-tablet-and-desktop() {
+.mq-tablet-critic() {
   .webp #hero {
     background: url("/assets/hero.webp");
 
@@ -79,7 +79,7 @@
   }
 }
 
-.hero-desktop() {
+.mq-desktop-critic() {
   #hero > .container {
     align-items: end;
     justify-self: center;
