--- a/styles/package.less
+++ b/styles/package.less
@@ -43,7 +43,7 @@
   }
 }
 
-.package-tablet() {
+.mq-tablet() {
   #services {
     .card-container {
       column-gap: 10px;
@@ -57,7 +57,7 @@
   }
 }
 
-.package-desktop() {
+.mq-desktop() {
   #services {
     padding: 40px 0 80px;
 
