--- a/styles/services.less
+++ b/styles/services.less
@@ -90,7 +90,7 @@
   }
 }
 
-.services-tablet() {
+.mq-tablet() {
   #package {
     .card-container {
       grid-template-columns: repeat(4, 1fr);
@@ -107,7 +107,7 @@
   }
 }
 
-.services-desktop() {
+.mq-desktop() {
   #package {
     padding: 80px 0 40px;
 
