--- a/variants/fb/critic.less
+++ b/variants/fb/critic.less
@@ -2,21 +2,15 @@
 @import "../../styles/form";
 @import "../../styles/fb";
 
-@media @media-mobile {
-}
-
 @media @media-tablet {
-  .generic-tablet();
-  .form-tablet();
-  .fb-tablet-and-desktop();
-}
-
-@media @media-l-tablet {
+  .mq-tablet-generic();
+  .mq-tablet-form();
+  .mq-tablet-fb();
 }
 
 @media @media-desktop {
-  .generic-desktop();
-  .form-desktop();
+  .mq-desktop-generic();
+  .mq-desktop-form();
 }
 
 // ACCESSIBILITY
