--- a/variants/implant/critic.less
+++ b/variants/implant/critic.less
@@ -4,21 +4,17 @@
 @import "../../styles/hero";
 
 @media @media-mobile {
-  .hero-mobile();
+  .mq-mobile-critic();
 }
 
 @media @media-tablet {
-  .generic-tablet();
-  .header-tablet();
-  .hero-tablet-and-desktop();
+  .mq-tablet-critic();
 }
 
 @media @media-l-tablet {
-  .header-l-tablet();
+  .mq-l-tablet-critic();
 }
 
 @media @media-desktop {
-  .generic-desktop();
-  .header-desktop();
-  .hero-desktop();
+  .mq-desktop-critic();
 }
