--- a/variants/implant/style.less
+++ b/variants/implant/style.less
@@ -1,5 +1,4 @@
-// @import "../../styles/...";
-// preload above!
+// Inline above!
 @import "../../styles/form";
 @import "../../styles/why";
 @import "../../styles/services";
@@ -16,42 +15,22 @@
 @import "../../commons/styles/wp-form";
 @import "../../commons/styles/whatsapp-fab";
 
-// TABLET AND DESKTOP STYLES
+// MEDIA QUERY STYLES
 
 @media @media-mobile {
-  //.hero-mobile();
+
 }
 
 @media @media-tablet {
-  //.generic-tablet();
-  //.header-tablet();
-  //.hero-tablet-and-desktop();
-  .form-tablet();
-  .services-tablet();
-  .hospital-tablet();
-  .package-tablet();
+  .mq-tablet();
 }
 
 @media @media-l-tablet {
-  //.header-l-tablet();
-  .cta-l-tablet-and-desktop();
-  .hospital-l-tablet();
+  .mq-l-tablet();
 }
 
 @media @media-desktop {
-  //.generic-desktop();
-  //.header-desktop();
-  //.hero-desktop();
-  .form-desktop();
-  .why-desktop();
-  .cta-desktop();
-  .hospital-desktop();
-  .services-desktop();
-  .before-after-desktop();
-  .package-desktop();
-  .influencers-desktop();
-  .faq-desktop();
-  .footer-desktop();
+  .mq-desktop();
 }
 
 @media @media-large {
