--- a/styles/cta.less
+++ b/styles/cta.less
@@ -39,7 +39,7 @@
   }
 }
 
-.cta-l-tablet-and-desktop() {
+.mq-l-tablet() {
   .cta {
     padding: 30px 0;
     text-align: left;
@@ -58,7 +58,7 @@
   }
 }
 
-.cta-desktop() {
+.mq-desktop() {
   .cta .cta-title {
     width: max-content;
   }
