--- a/styles/hospital.less
+++ b/styles/hospital.less
@@ -10,7 +10,7 @@
   }
 }
 
-.hospital-tablet() {
+.mq-tablet() {
   #hospital {
     .gallery {
       grid-template-columns: repeat(2, auto);
@@ -28,7 +28,7 @@
   }
 }
 
-.hospital-l-tablet() {
+.mq-l-tablet() {
   #hospital {
     .gallery {
       grid-template-columns: repeat(3, auto);
@@ -36,7 +36,7 @@
   }
 }
 
-.hospital-desktop() {
+.mq-desktop() {
   #hospital {
     padding: 75px 0 40px;
   }
