--- a/styles/generic.less
+++ b/styles/generic.less
@@ -55,12 +55,12 @@ strong {
   scale: 1.05;
 }
 
-.mq-tablet-critic() { .mq-tablet-generic(); }
+.mq-tablet-critical() { .mq-tablet-generic(); }
 .mq-tablet-generic() {
 
 }
 
-.mq-desktop-critic() { .mq-desktop-generic(); }
+.mq-desktop-critical() { .mq-desktop-generic(); }
 .mq-desktop-generic() {
   .section-title {
     font-size: 34px;
