--- a/styles/header.less
+++ b/styles/header.less
@@ -14,7 +14,7 @@ header nav {  // TODO make a dropdown menu!?
   display: none;
 }
 
-.mq-tablet-critic() {
+.mq-tablet-critical() {
   header > .container {
     flex-direction: column;
     justify-content: center;
@@ -23,7 +23,7 @@ header nav {  // TODO make a dropdown menu!?
   }
 }
 
-.mq-l-tablet-critic() {
+.mq-l-tablet-critical() {
   header nav {
     display: flex;
     justify-content: center;
@@ -38,7 +38,7 @@ header nav {  // TODO make a dropdown menu!?
   }
 }
 
-.mq-desktop-critic() {
+.mq-desktop-critical() {
   header {
     padding: 35px 0;
 
