--- a/styles/hero.less
+++ b/styles/hero.less
@@ -49,7 +49,7 @@
 
 // MEDIA QUERIES
 
-.mq-mobile-critic() {
+.mq-mobile-critical() {
   // TODO check if hero-mobile 2x version looks good
 
   #hero {
@@ -57,7 +57,7 @@
   }
 }
 
-.mq-tablet-critic() {
+.mq-tablet-critical() {
   #hero {
     background: url("/assets/hero.webp");
 
@@ -67,7 +67,7 @@
   }
 }
 
-.mq-desktop-critic() {
+.mq-desktop-critical() {
   #hero > .container {
     align-items: end;
     justify-self: center;
