--- a/variants/implant/critic.less
+++ b/variants/implant/critic.less
@@ -3,18 +3,4 @@
 @import "../../styles/header";
 @import "../../styles/hero";
 
-@media @media-mobile {
-  .mq-mobile-critic();
-}
-
-@media @media-tablet {
-  .mq-tablet-critic();
-}
-
-@media @media-l-tablet {
-  .mq-l-tablet-critic();
-}
-
-@media @media-desktop {
-  .mq-desktop-critic();
-}
+.merge-critical-queries();
