--- a/variants/implant/style.less
+++ b/variants/implant/style.less
@@ -17,25 +17,7 @@
 
 // MEDIA QUERY STYLES
 
-@media @media-mobile {
-
-}
-
-@media @media-tablet {
-  .mq-tablet();
-}
-
-@media @media-l-tablet {
-  .mq-l-tablet();
-}
-
-@media @media-desktop {
-  .mq-desktop();
-}
-
-@media @media-large {
-
-}
+.merge-queries();
 
 // ACCESSIBILITY
 
