--- a/styles/hero.less
+++ b/styles/hero.less
@@ -130,6 +130,8 @@
       .button {
          width: 100%;
          min-width: fit-content;
+         background-color: rgba(54, 218, 78, .92);
+         color: #21234a;   
       }
    }
 
