--- a/variants/implant/style.less
+++ b/variants/implant/style.less
@@ -22,3 +22,23 @@
 // ACCESSIBILITY
 
 @import "../../commons/styles/accessibility";
+
+#whatsapp-fab {
+  animation: buttonAnimation 2s linear infinite;
+}
+
+@keyframes buttonAnimation {
+  0% {
+    box-shadow: 0 0 0 0 rgb(0 175 143), 0 0 0 0 rgb(0 175 143);
+  }
+
+  40% {
+    box-shadow: 0 0 0 25px rgb(0 211 116 / 0%), 0 0 0 0 rgb(0 175 143);
+  }
+  80% {
+    box-shadow: 0 0 0 30px rgb(255 0 64 / 0%), 0 0 0 15px rgb(255 0 64 / 0%);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgb(255 0 64 / 0%), 0 0 0 15px rgb(255 0 64 / 0%);
+  }
+}
