Add build script for compiling Less to CSS and minifying JavaScript
- Created a new script `build-css.sh` to automate the process of compiling .less files located in the `variants` and `pages` directories into .css files using `lessc`.
- Integrated Gulp task to minify JavaScript files after the CSS build process.
- Added a new icon file `telegram-temp.ico` with binary data.

--- a/variants/implant/style.less
+++ b/variants/implant/style.less
@@ -14,6 +14,7 @@
 @import "../../styles/footer";
 @import "../../commons/styles/wp-form";
 @import "../../commons/styles/whatsapp-fab";
+@import "../../commons/styles/telegram-fab";
 
 // MEDIA QUERY STYLES
 
@@ -25,6 +26,10 @@
 
 #whatsapp-fab {
   animation: buttonAnimation 2s linear infinite;
+}
+
+#telegram-fab {
+  animation: buttonAnimation 2s linear infinite 0.5s; // 0.5s delay için staggered effect
 }
 
 @keyframes buttonAnimation {
