--- a/variants/implant/style.less
+++ b/variants/implant/style.less
@@ -14,7 +14,7 @@
 @import "../../styles/footer";
 @import "../../commons/styles/wp-form";
 @import "../../commons/styles/whatsapp-fab";
-@import "../../commons/styles/telegram-fab";
+// @import "../../commons/styles/telegram-fab"; // Geçici yorum
 
 // MEDIA QUERY STYLES
 
