--- a/variants/implant/style.less
+++ b/variants/implant/style.less
@@ -30,6 +30,51 @@
 
 #telegram-fab {
   animation: buttonAnimation 2s linear infinite 0.5s; // 0.5s delay için staggered effect
+  
+  // Telegram FAB stilleri inline
+  position: fixed;
+  right: 15px;
+  bottom: 100px;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  padding: 15px;
+  border-radius: 100%;
+  color: #fff;
+  background-color: rgba(36, 161, 228, 0.92);
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  text-decoration: none;
+  transition: filter .4s, column-gap .1s;
+
+  &:hover {
+    filter: brightness(110%);
+  }
+
+  & img {
+    width: 39px;
+    height: 39px;
+  }
+
+  @media only screen and (max-width: 600px) {
+    & > span {
+      max-height: 24px;
+      transition: padding 500ms;
+      overflow: hidden;
+    }
+
+    &.collapsed {
+      border-radius: 50%;
+      column-gap: 0;
+
+      span {
+        max-width: 0;
+      }
+    }
+  }
 }
 
 @keyframes buttonAnimation {
