--- a/variants/implant/style.less
+++ b/variants/implant/style.less
@@ -31,7 +31,7 @@
 #telegram-fab {
   animation: buttonAnimation 2s linear infinite 0.5s; // 0.5s delay için staggered effect
   
-  // Telegram FAB stilleri inline
+  // Telegram FAB stilleri inline - TEST DEPLOYMENT
   position: fixed;
   right: 15px;
   bottom: 100px;
