--- a/styles/influencers.less
+++ b/styles/influencers.less
@@ -6,10 +6,15 @@
     flex-direction: column;
     align-items: center;
     row-gap: 20px;
+    overflow-x: hidden;
+    width: 100%;
 
     iframe {
       width: 100%;
+      max-width: 100%;
       aspect-ratio: 16 / 9;
+      border: none;
+      border-radius: 8px;
     }
   }
 }
